--- a/index.html
+++ b/index.html
@@ -6,11 +6,73 @@
     <meta name="viewport" content="width=device-width">
     <title>Austin Binkley</title>
     <link rel="stylesheet" type="text/css"
-        href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
+<!--- beginning of body block that will contain everything on the page --->
 <body>
+    <!--- header container to display name and (desired)profession up top --->
+    <header>
+        <h1>Austin Binkley</h1>
+        <h3><i>Software Engineer</i></h3>
+    </header>
+    
+    <!--- horizontal rule for spacing/formatting --->
+    <hr>
+
+    <main>
+        <div>
+    <!--- CSS class specifically for formatting the image --->
+            <img class="imgcontainer"src="./images/index/linkedin.jpg"/>
+        </div>
+
+        <article>
+            <h2>Info</h2>
+            <div>
+                <ul>
+                    <li>Lives in Austin, Tx</li>
+                    <li>Likes Python and JS</li>
+                    <li>Loves whitespace and tab spacing</li>
+                    <li>Determined to find a way to solve all programming problems with recursion</li>
+                    <li>Thinkful student</li>
+                </ul>
+            </div>
+
+            <hr>
+
+            <h2>About Me</h2>
+            <p>Hello! My name is Austin (in Austin), and I love to code! In an ideal work environment, I would be able to work with a large team of experienced programmers, tackling new challenges every day and learning something new all the time. </p>
+
+            <p>A few of my other hobbies and interests include disc golf, D&D, watching 49ers football, board gaming, reading, and, most importantly, hanging out my wife and friends.</p>
+
+            <p>Please feel free to shoot me a <a href="https://twitter.com/ahbinks">DM</a> or check out any of my other profiles below if you have more questions or are interested in working with me.</p>
+
+            <hr>
+
+            <h2>Contact</h2>
+
+            <div>
+                <ol>
+                    <li><a href="https://github.com/flinney">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/austin-binkley-23a8651aa/">LinkedIn</a></li>
+                    <li><a href="mailto:binkleyaustin@outlook.com">Send me an email!</a></li>
+                </ol>
+            </div>
+
+        </article>
+
+
+
+
+    </main>
+
+    <hr>
+
+    <footer>
+        <p>Austin Binkley</p>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 
