--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
     
     <!--- horizontal rule for spacing/formatting --->
     <hr>
-
+    <!--- main container primarily used for structure, div container has special formatting --->
     <main>
         <div>
     <!--- CSS class specifically for formatting the image --->
             <img class="imgcontainer"src="./images/index/linkedin.jpg"/>
         </div>
-
+        <!--article container used for structure, h2 headers for the 3 sections within article, all separated by horizontal rules-->
         <article>
             <h2>Info</h2>
+            <!---applying div container to both lists for formatting; needed to centralize lists without using text-align--->
             <div>
                 <ul>
                     <li>Lives in Austin, Tx</li>
@@ -51,8 +52,8 @@
             <hr>
 
             <h2>Contact</h2>
-
-            <div>
+            <!---added css class to further center short list--->
+            <div class="centeredlist">
                 <ol>
                     <li><a href="https://github.com/flinney">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/austin-binkley-23a8651aa/">LinkedIn</a></li>
@@ -68,7 +69,7 @@
     </main>
 
     <hr>
-
+    <!--- footer container separated for formatting/structure--->
     <footer>
         <p>Austin Binkley</p>
     </footer>
