fix image pathing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <div>
     <!--- CSS class specifically for formatting the image --->
-            <img class="imgcontainer"src="./images/index/linkedin.jpg"/>
+            <img class="imgcontainer"src="./linkedin.jpg"/>
         </div>
         <!--article container used for structure, h2 headers for the 3 sections within article, all separated by horizontal rules-->
         <article>
