--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <main>
         <div>
     <!--- CSS class specifically for formatting the image --->
-            <img class="imgcontainer"src="./linkedin.jpg"/>
+            <img class="imgcontainer imgcenter"src="./linkedin.jpg"/>
         </div>
         <!--article container used for structure, h2 headers for the 3 sections within article, all separated by horizontal rules-->
         <article>
             <h2>Info</h2>
             <!---applying div container to both lists for formatting; needed to centralize lists without using text-align--->
-            <div>
+            <div class="centeredlist">
                 <ul>
                     <li>Lives in Austin, Tx</li>
                     <li>Likes Python and JS</li>
