Add alt descriptor for im

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <div>
     <!--- CSS class specifically for formatting the image --->
-            <img class="imgcontainer imgcenter"src="./linkedin.jpg"/>
+            <img class="imgcontainer imgcenter"src="./linkedin.jpg"alt="Austin Binkley with his wife, Jaimie."/>
         </div>
         <!--article container used for structure, h2 headers for the 3 sections within article, all separated by horizontal rules-->
         <article>
