Fix Formatting Errors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -10,26 +10,26 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<!--- beginning of body block that will contain everything on the page --->
+<!-- beginning of body block that will contain everything on the page -->
 <body>
-    <!--- header container to display name and (desired)profession up top --->
+    <!-- header container to display name and (desired)profession up top -->
     <header>
         <h1>Austin Binkley</h1>
         <h3><i>Software Engineer</i></h3>
     </header>
     
-    <!--- horizontal rule for spacing/formatting --->
+    <!-- horizontal rule for spacing/formatting -->
     <hr>
-    <!--- main container primarily used for structure, div container has special formatting --->
+    <!-- main container primarily used for structure, div container has special formatting -->
     <main>
         <div>
-    <!--- CSS class specifically for formatting the image --->
-            <img class="imgcontainer imgcenter"src="./linkedin.jpg"alt="Austin Binkley with his wife, Jaimie."/>
+    <!-- CSS class specifically for formatting the image -->
+            <img class="imgcontainer imgcenter" src="./linkedin.jpg" alt="Austin Binkley with his wife, Jaimie."/>
         </div>
         <!--article container used for structure, h2 headers for the 3 sections within article, all separated by horizontal rules-->
         <article>
             <h2>Info</h2>
-            <!---applying div container to both lists for formatting; needed to centralize lists without using text-align--->
+            <!--applying div container to both lists for formatting; needed to centralize lists without using text-align-->
             <div class="centeredlist">
                 <ul>
                     <li>Lives in Austin, Tx</li>
@@ -45,18 +45,18 @@
             <h2>About Me</h2>
             <p>Hello! My name is Austin (in Austin), and I love to code! In an ideal work environment, I would be able to work with a large team of experienced programmers, tackling new challenges every day and learning something new all the time. </p>
 
-            <p>A few of my other hobbies and interests include disc golf, D&D, watching 49ers football, board gaming, reading, and, most importantly, hanging out my wife and friends.</p>
+            <p>A few of my other hobbies and interests include disc golf, D&D, watching 49ers football, board gaming, reading, and, most importantly, hanging out with my wife and friends.</p>
 
-            <p>Please feel free to shoot me a <a href="https://twitter.com/ahbinks">DM</a> or check out any of my other profiles below if you have more questions or are interested in working with me.</p>
+            <p>Please feel free to shoot me a <a href="https://twitter.com/ahbinks" target="_blank">DM</a> or check out any of my other profiles below if you have more questions or are interested in working with me.</p>
 
             <hr>
 
             <h2>Contact</h2>
-            <!---added css class to further center short list--->
+            <!--added css class to further center short list-->
             <div class="centeredlist">
                 <ol>
-                    <li><a href="https://github.com/flinney">GitHub</a></li>
-                    <li><a href="https://www.linkedin.com/in/austin-binkley-23a8651aa/">LinkedIn</a></li>
+                    <li><a href="https://github.com/flinney" target="_blank">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/austin-binkley-23a8651aa/" target="_blank">LinkedIn</a></li>
                     <li><a href="mailto:binkleyaustin@outlook.com">Send me an email!</a></li>
                 </ol>
             </div>
@@ -69,7 +69,7 @@
     </main>
 
     <hr>
-    <!--- footer container separated for formatting/structure--->
+    <!-- footer container separated for formatting/structure-->
     <footer>
         <p>Austin Binkley</p>
     </footer>
